<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_song_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#008080"
    tools:context="com.example.baker.myfavouritesong.SongDetails">

    <Button
        android:text="@string/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button6"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnPlay" />

    <Button
        android:text="@string/btnPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button7"
        android:layout_below="@+id/btnPlay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnPause" />

    <Button
        android:text="@string/btnStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button8"
        android:layout_below="@+id/btnPause"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnStop" />

    <TextView
        android:text="@string/txtSongDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="1sp"
        android:gravity="center"
        android:textSize="40sp"
        android:id="@+id/txtSongDetails"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:paddingTop="2sp"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/txtSongDetails"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtSongFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:paddingTop="-3sp"
        android:paddingBottom="5sp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="30dp"
        android:id="@+id/txtSongFullName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
