<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#008080"
    tools:context="com.example.baker.myfavouritesong.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/my_pic"
        android:id="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_height="220sp" />

    <TextView
        android:text="@string/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="38dp"
        android:id="@+id/txtName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtMyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/txtMyName" />

    <TextView
        android:text="@string/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_below="@+id/txtMyName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/txtEmail" />

    <TextView
        android:text="@string/txtMyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/txtMyEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
