<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_song_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#008080"
    tools:context="com.example.baker.myfavouritesong.SongName">

    <Button
        android:text="@string/btnOPakiTor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button"
        android:layout_alignParentTop="true"
        android:id="@+id/btnOPakiTor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnKhaironLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button2"
        android:layout_below="@+id/btnOPakiTor"
        android:id="@+id/btnKhaironLo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnSunRahaHa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button3"
        android:layout_below="@+id/btnKhaironLo"
        android:id="@+id/btnSunRahaHa"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnBigBatteryAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="20sp"
        android:gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button4"
        android:layout_below="@+id/btnSunRahaHa"
        android:id="@+id/btnBigBatteryAdd" />

    <Button
        android:text="@string/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:padding="30sp"
        android:gravity="center"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_button5"
        android:id="@+id/btnAbout"
        android:layout_below="@+id/btnBigBatteryAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
